--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -7,6 +7,7 @@
     border-bottom: 4px solid transparent;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding-inline: 0.5rem;
     transition: border-color 100ms ease;
 }
@@ -20,7 +21,7 @@
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 .nav .nav__actions .nav__icon {
     height: 3rem;
