--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -12,6 +12,7 @@
 }
 .nav .nav__tab.router-link-active {
     border-color: var(--color-on-primary);
+    justify-content: center;
 }
 .nav .nav__tab:hover {
     border-color: var(--color-on-primary);
